--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "egal"
   ],
   "author": "Egal Team",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "@types/amqplib": "^0.5.17",
     "@types/js-cookie": "^2.2.6",
