--- a/package.json
+++ b/package.json
@@ -19,21 +19,25 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/stompjs": "^2.3.4",
+    "@vue/composition-api": "^1.0.0-rc.11",
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
     "pinia": "^0.5.2",
     "prettier": "^2.2.1",
     "sockjs-client": "^1.5.1",
     "stompjs": "^2.3.3",
     "typescript": "^4.2.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@types/node": "^14.17.1",
+    "@types/node": "^14.14.31",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "axios": "^0.21.1",
     "eslint": "^7.22.0",
+    "madge": "^4.0.2",
     "nodemon": "^2.0.7"
   }
 }
