--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "sockjs-client": "^1.5.1",
     "stompjs": "^2.3.3",
     "typescript": "^4.2.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
