--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     ],
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
     /* Disallow inconsistently-cased references to the same file. */
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
     /* Basic Options */
