--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@egalteam/framework",
   "description": "Egal",
-  "main": "test.js",
+  "main": "index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node test.js",
+    "start": "tsc && node index.js",
     "watch-and-run": "tsc -w & nodemon -q -w src index.js",
     "dev:watch": "nodemon --watch ./src/**/* -e ts,tsx --exec ts-node index.ts",
     "serve": "vue-cli-service serve",
