--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "axios": "^0.21.1",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3",
-    "validatorjs": "^3.22.1"
+    "validatorjs": "^3.22.1",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "@types/node": "^14.17.21",
@@ -33,7 +34,6 @@
     "@typescript-eslint/parser": "^4.19.0",
     "axios": "^0.21.1",
     "eslint": "^7.22.0",
-    "madge": "^4.0.2",
-    "nodemon": "^2.0.7"
+    "madge": "^4.0.2"
   }
 }
