--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm install
       - run: node node_modules/nodemon/bin/nodemon.js
       - run: rm -r src .github
-      - run: rm nodemon.json .gitignore .prettierrc
+      - run: rm nodemon.json .gitignore .prettierrc index.js
       - run: ls -la
       - run: exit 1
 #      - run: |
